--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="clima_react/styles/style.css">
     <title>Meu Projeto</title>
   </head>
   <body>
@@ -23,8 +23,8 @@
     <div id="root"></div>
 
     <!-- Script principal -->
-    <script type="module" src="/src/main.jsx"></script>
-    <script src="/scripts/active.js" defer></script>
+    <script type="module" src="clima_react/src/main.jsx"></script>
+    <script src="clima_react/scripts/active.js" defer></script>
 
   </body>
 </html>
