--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="nav-container">
       <div class="indicator"></div> <!-- esse é o slider -->
       <a href="/">Início</a>
+      <a href="/pesquisar">Pesquisar</a>
       <a href="/sobre">Sobre</a>
-      <a href="/contato">Contato</a>
     </div>
   </header>
 
